# ocp-performance-analyzer-mcp

./: test_egressip_basic.py  test_egressip_metrics.db
config/: config-egressip.yml
mcp/egress/: README.md  egress_analyzer_mcp_server.py  pyproject.toml  requirements.txt
mcp/egress/config/: egress_config.yaml
mcp/node/: node_analyzer_client_chat.py
test/: test_egressip_basic.py  test_egressip_fixed.py  test_egressip_metrics_fixed.py
tools/: egressi
tools/egressip/: EGRESSIP_README.md  egressip_cornet_6498_runner.py  egressip_metrics_collector.py  egressip_ovn_rule_analyzer.py
tools/utils/: promql_basequery.py
webroot/node/: node_analyzer_mcp_llm.html
